[project]
name = "langgraph-harness"
version = "0.1.0"
description = "LangGraph harness for building and running LLM agent workflows"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "renenavas" }]
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3",
    "langgraph>=0.2",
    "langchain>=0.3",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
